fixed bouncing icons and spacing

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -240,4 +240,5 @@ a.navbar-item.is-active {
 
 #symbolsCont {
   margin-top: -10%;
+  width: 100%;
 }
